# DinoV2-YOLO-Depth_find_same_interiour_service

./: .gitignore  All Infoemation.md  PROJECT_STATE.md  README.md  build_depth_index.py  build_index.py  build_yolo_index.py  main.py  pyproject.toml  requirements.txt
app/: config.py  depth_extractor.py  extractor.py  indexer.py  retriever.py  yolo_extractor.py
index/: metadata.json  yolo_metadata.json
static/: app.js  index.html  style.css
